--- a/css/custom.css
+++ b/css/custom.css
@@ -4,16 +4,9 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
 
-/* Global Styles */
+ /* Global Styles */
 
-html,
-body {
-    height: 100%;
-}
 
-body {
-    padding-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
-}
 
 .img-portfolio {
     margin-bottom: 30px;
@@ -25,9 +18,15 @@ body {
 
 /* Home Page Carousel */
 
-header.carousel {
-    height: 50%;
+
+header.carousel  {
+    
+    height: 500px;
+   
 }
+
+
+
 
 header.carousel .item,
 header.carousel .item.active,
@@ -38,7 +37,7 @@ header.carousel .carousel-inner {
 header.carousel .fill {
     width: 100%;
     height: 100%;
-    background-position: center;
+    background-position: top;
     background-size: cover;
 }
 
@@ -47,27 +46,6 @@ header.carousel .fill {
 .error-404 {
     font-size: 100px;
 }
-
-/* Pricing Page Styles */
-
-.price {
-    display: block;
-    font-size: 50px;
-    line-height: 50px;
-}
-
-.price sup {
-    top: -20px;
-    left: 2px;
-    font-size: 20px;
-}
-
-.period {
-    display: block;
-    font-style: italic;
-}
-
-/* Footer Styles */
 
 
 
@@ -92,6 +70,7 @@ header.carousel .fill {
 
 /*VIS*/
 .navbar-inverse {
+    
     background-color: #a94442;
     border-color: #080808;
     color: #000000;
@@ -106,27 +85,45 @@ header.carousel .fill {
 .navbar-inverse .navbar-nav>li>a {
     color: #000000;
 }
-
+.row{ margin-top: 50px; }
 footer{
-    margin-top: 45%;
     position: absolute;
     right: 0;
     left: 0;
     padding-top: 8PX;
     background-color: #a94442;
     border-top: #000000;
-    height: 10%;
+    hei
     text-align: right;
 
 
 
 }
+.info
+{   align-content: center;
+    width : 60%
+    padding-left: 5%;
+    
 
+}
+.ExtraInfo
+{   
+    align-content: center;
+
+}
 .social-icons a{
-    text-align: right;
-    font-size: 150%;
+    text-align: left
+    font-size: 30%;
     color: #000000;
+
 }
+.BreakingNews{
+    text-align: center;
+    color : #a94442;
+    font: bold;
+}
+
+    
 
 .navbar-nav>li>a {
     color: #000000;
