--- a/css/custom.css
+++ b/css/custom.css
@@ -25,7 +25,9 @@ header.carousel  {
    
 }
 
-
+h4{
+    color : black;
+}
 
 
 header.carousel .item,
@@ -132,7 +134,7 @@ footer{
 
 
 .BreakingNewsPanel{
-    height:100px;
+    height:40vh;
     background-color: #FFE4E1;
     padding:20px;/*outside padding*/
     border-radius: 2px;
@@ -140,7 +142,7 @@ footer{
 
 .NewsItem{
     background:#cccccc;
-    height:60px;
+    height:100%;
     padding:20px;/*nside padding: */
     border-radius: 2px;
 }
@@ -151,4 +153,20 @@ opacity:0.8;
     height: 100%;
     background-position: top;
     background-size: cover;
+}
+
+.center{
+
+    text-align: center;
+}
+
+.NewsItemText{
+    text-align: center;
+    width: 100%;    
+    bottom: 0;
+    left:0;
+    right:0;
+    color : white;
+    background-color: black;
+    opacity: 0.7;
 }
