--- a/css/custom.css
+++ b/css/custom.css
@@ -95,9 +95,9 @@ footer{
     padding-top: 8PX;
     background-color: #a94442;
     border-top: #000000;
-    hei
+   
     text-align: right;
-
+        display: table-row;
 
 
 }
@@ -108,11 +108,7 @@ footer{
     
 
 }
-.ExtraInfo
-{   
-    align-content: center;
 
-}
 .social-icons a{
     text-align: left
     font-size: 30%;
@@ -132,10 +128,16 @@ footer{
     
 }
 
+.background{
+    background-color: #FFE4E1;
+    margin: 15px;
+    border-radius: 2px;
+}
 
 .BreakingNewsPanel{
-    height : 30vh;
-    background-color: #FFE4E1;
+    height: 60vh;
+    width : 100%;
+    margin: 15px;
     padding:20px;/*outside padding*/
     border-radius: 2px;
 }
@@ -148,7 +150,7 @@ footer{
 }
 
 .NewsImage{
-opacity:0.8;
+
     width: 100%;
     height: 100%;
     background-position: top;
@@ -158,15 +160,50 @@ opacity:0.8;
 .center{
 
     text-align: center;
+    align-content: center;
+    align-items: center;
+    align-self: center;
 }
 
 .NewsItemText{
     text-align: center;
-    width: 100%;    
+    width: 100%; 
+    height: 15%;   
     bottom: 0;
+    font-size: 3vh;
     left:0;
     right:0;
     color : white;
     background-color: black;
     opacity: 0.7;
+}
+
+.panel-default
+{
+    border-radius: 0px;
+    
+    background-color: white;
+
+}
+
+.markets-index-promo__row .down:before, .markets-index-promo__row .up:before {
+    float: left;
+    margin: 2px 0 0 12%;
+}
+
+.markets-index-promo__row .down:before {
+    border-color: #cc1417 transparent transparent;
+    border-width: 14px 8px 0;
+}
+
+.markets-index-promo__row .up:before {
+    border-color: transparent transparent #00782c;
+    border-width: 0 8px 14px;
+}
+.markets-index-data__difference--up:before, .markets-index-data__difference--down:before, .markets-index-promo__row .down:before, .markets-index-promo__row .up:before, .markets-index-table--row .markets-index-table--name--up:before, .markets-index-table--row .markets-index-table--name--down:before {
+    border-style: solid;
+    content: '';
+    display: inline-block;
+    height: 0;
+    width: 0;
 }
